content/_generated-doc/2.16/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config.adoc

:summaryTableId: quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_configuration]]link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.hosts]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.hosts[quarkus.hibernate-search-orm.elasticsearch.backends."backend-name".hosts]`

[.description]
--
The list of hosts of the Elasticsearch servers.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__HOSTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__HOSTS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`localhost:9200`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.protocol]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.protocol[quarkus.hibernate-search-orm.elasticsearch.backends."backend-name".protocol]`

[.description]
--
The protocol to use when contacting Elasticsearch servers. Set to "https" to enable SSL/TLS.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__PROTOCOL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__PROTOCOL+++`
endif::add-copy-button-to-env-var[]
-- a|
`http`, `https` 
|`http`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.username]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.username[quarkus.hibernate-search-orm.elasticsearch.backends."backend-name".username]`

[.description]
--
The username used for authentication.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__USERNAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.password]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.password[quarkus.hibernate-search-orm.elasticsearch.backends."backend-name".password]`

[.description]
--
The password used for authentication.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.connection-timeout]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.connection-timeout[quarkus.hibernate-search-orm.elasticsearch.backends."backend-name".connection-timeout]`

[.description]
--
The timeout when establishing a connection to an Elasticsearch server.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__CONNECTION_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__CONNECTION_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`1S`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.read-timeout]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.read-timeout[quarkus.hibernate-search-orm.elasticsearch.backends."backend-name".read-timeout]`

[.description]
--
The timeout when reading responses from an Elasticsearch server.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__READ_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__READ_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`30S`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.request-timeout]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.request-timeout[quarkus.hibernate-search-orm.elasticsearch.backends."backend-name".request-timeout]`

[.description]
--
The timeout when executing a request to an Elasticsearch server.

This includes the time needed to wait for a connection to be available,
send the request and read the response.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__REQUEST_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__REQUEST_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.max-connections]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.max-connections[quarkus.hibernate-search-orm.elasticsearch.backends."backend-name".max-connections]`

[.description]
--
The maximum number of connections to all the Elasticsearch servers.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__MAX_CONNECTIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__MAX_CONNECTIONS+++`
endif::add-copy-button-to-env-var[]
--|int 
|`20`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.max-connections-per-route]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.max-connections-per-route[quarkus.hibernate-search-orm.elasticsearch.backends."backend-name".max-connections-per-route]`

[.description]
--
The maximum number of connections per Elasticsearch server.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__MAX_CONNECTIONS_PER_ROUTE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__MAX_CONNECTIONS_PER_ROUTE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`10`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.discovery.enabled]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.discovery.enabled[quarkus.hibernate-search-orm.elasticsearch.backends."backend-name".discovery.enabled]`

[.description]
--
Defines if automatic discovery is enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__DISCOVERY_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__DISCOVERY_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.discovery.refresh-interval]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.discovery.refresh-interval[quarkus.hibernate-search-orm.elasticsearch.backends."backend-name".discovery.refresh-interval]`

[.description]
--
Refresh interval of the node list.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__DISCOVERY_REFRESH_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__DISCOVERY_REFRESH_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`10S`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.thread-pool.size]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.thread-pool.size[quarkus.hibernate-search-orm.elasticsearch.backends."backend-name".thread-pool.size]`

[.description]
--
The size of the thread pool assigned to the backend.

Note that number is **per backend**, not per index.
Adding more indexes will not add more threads.

As all operations happening in this thread-pool are non-blocking,
raising its size above the number of processor cores available to the JVM will not bring noticeable performance
benefit.
The only reason to alter this setting would be to reduce the number of threads;
for example, in an application with a single index with a single indexing queue,
running on a machine with 64 processor cores,
you might want to bring down the number of threads.

Defaults to the number of processor cores available to the JVM on startup.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__THREAD_POOL_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__THREAD_POOL_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.version-check.enabled]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.version-check.enabled[quarkus.hibernate-search-orm.elasticsearch.backends."backend-name".version-check.enabled]`

[.description]
--
Whether Hibernate Search should check the version of the Elasticsearch cluster on startup.

Set to `false` if the Elasticsearch cluster may not be available on startup.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__VERSION_CHECK_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__VERSION_CHECK_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.schema-management.required-status]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.schema-management.required-status[quarkus.hibernate-search-orm.elasticsearch.backends."backend-name".schema-management.required-status]`

[.description]
--
The minimal https://www.elastic.co/guide/en/elasticsearch/reference/7.17/cluster-health.html[Elasticsearch cluster
status] required on startup.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__SCHEMA_MANAGEMENT_REQUIRED_STATUS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__SCHEMA_MANAGEMENT_REQUIRED_STATUS+++`
endif::add-copy-button-to-env-var[]
-- a|
`green`, `yellow`, `red` 
|`yellow`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.schema-management.required-status-wait-timeout]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.schema-management.required-status-wait-timeout[quarkus.hibernate-search-orm.elasticsearch.backends."backend-name".schema-management.required-status-wait-timeout]`

[.description]
--
How long we should wait for the status before failing the bootstrap.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__SCHEMA_MANAGEMENT_REQUIRED_STATUS_WAIT_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__SCHEMA_MANAGEMENT_REQUIRED_STATUS_WAIT_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`10S`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.indexing.queue-count]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.indexing.queue-count[quarkus.hibernate-search-orm.elasticsearch.backends."backend-name".indexing.queue-count]`

[.description]
--
The number of indexing queues assigned to each index.

Higher values will lead to more connections being used in parallel,
which may lead to higher indexing throughput,
but incurs a risk of overloading Elasticsearch,
i.e. of overflowing its HTTP request buffers and tripping
https://www.elastic.co/guide/en/elasticsearch/reference/7.9/circuit-breaker.html[circuit breakers],
leading to Elasticsearch giving up on some request and resulting in indexing failures.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__INDEXING_QUEUE_COUNT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__INDEXING_QUEUE_COUNT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`10`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.indexing.queue-size]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.indexing.queue-size[quarkus.hibernate-search-orm.elasticsearch.backends."backend-name".indexing.queue-size]`

[.description]
--
The size of indexing queues.

Lower values may lead to lower memory usage, especially if there are many queues,
but values that are too low will reduce the likeliness of reaching the max bulk size
and increase the likeliness of application threads blocking because the queue is full,
which may lead to lower indexing throughput.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__INDEXING_QUEUE_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__INDEXING_QUEUE_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`1000`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.indexing.max-bulk-size]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.indexing.max-bulk-size[quarkus.hibernate-search-orm.elasticsearch.backends."backend-name".indexing.max-bulk-size]`

[.description]
--
The maximum size of bulk requests created when processing indexing queues.

Higher values will lead to more documents being sent in each HTTP request sent to Elasticsearch,
which may lead to higher indexing throughput,
but incurs a risk of overloading Elasticsearch,
i.e. of overflowing its HTTP request buffers and tripping
https://www.elastic.co/guide/en/elasticsearch/reference/7.9/circuit-breaker.html[circuit breakers],
leading to Elasticsearch giving up on some request and resulting in indexing failures.

Note that raising this number above the queue size has no effect,
as bulks cannot include more requests than are contained in the queue.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__INDEXING_MAX_BULK_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__INDEXING_MAX_BULK_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`100`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.indexes.-index-name-.schema-management.required-status]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.indexes.-index-name-.schema-management.required-status[quarkus.hibernate-search-orm.elasticsearch.backends."backend-name".indexes."index-name".schema-management.required-status]`

[.description]
--
The minimal https://www.elastic.co/guide/en/elasticsearch/reference/7.17/cluster-health.html[Elasticsearch cluster
status] required on startup.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_REQUIRED_STATUS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_REQUIRED_STATUS+++`
endif::add-copy-button-to-env-var[]
-- a|
`green`, `yellow`, `red` 
|`yellow`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.indexes.-index-name-.schema-management.required-status-wait-timeout]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.indexes.-index-name-.schema-management.required-status-wait-timeout[quarkus.hibernate-search-orm.elasticsearch.backends."backend-name".indexes."index-name".schema-management.required-status-wait-timeout]`

[.description]
--
How long we should wait for the status before failing the bootstrap.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_REQUIRED_STATUS_WAIT_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_REQUIRED_STATUS_WAIT_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`10S`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.indexes.-index-name-.indexing.queue-count]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.indexes.-index-name-.indexing.queue-count[quarkus.hibernate-search-orm.elasticsearch.backends."backend-name".indexes."index-name".indexing.queue-count]`

[.description]
--
The number of indexing queues assigned to each index.

Higher values will lead to more connections being used in parallel,
which may lead to higher indexing throughput,
but incurs a risk of overloading Elasticsearch,
i.e. of overflowing its HTTP request buffers and tripping
https://www.elastic.co/guide/en/elasticsearch/reference/7.9/circuit-breaker.html[circuit breakers],
leading to Elasticsearch giving up on some request and resulting in indexing failures.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__INDEXES__INDEX_NAME__INDEXING_QUEUE_COUNT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__INDEXES__INDEX_NAME__INDEXING_QUEUE_COUNT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`10`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.indexes.-index-name-.indexing.queue-size]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.indexes.-index-name-.indexing.queue-size[quarkus.hibernate-search-orm.elasticsearch.backends."backend-name".indexes."index-name".indexing.queue-size]`

[.description]
--
The size of indexing queues.

Lower values may lead to lower memory usage, especially if there are many queues,
but values that are too low will reduce the likeliness of reaching the max bulk size
and increase the likeliness of application threads blocking because the queue is full,
which may lead to lower indexing throughput.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__INDEXES__INDEX_NAME__INDEXING_QUEUE_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__INDEXES__INDEX_NAME__INDEXING_QUEUE_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`1000`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.indexes.-index-name-.indexing.max-bulk-size]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.elasticsearch.backends.-backend-name-.indexes.-index-name-.indexing.max-bulk-size[quarkus.hibernate-search-orm.elasticsearch.backends."backend-name".indexes."index-name".indexing.max-bulk-size]`

[.description]
--
The maximum size of bulk requests created when processing indexing queues.

Higher values will lead to more documents being sent in each HTTP request sent to Elasticsearch,
which may lead to higher indexing throughput,
but incurs a risk of overloading Elasticsearch,
i.e. of overflowing its HTTP request buffers and tripping
https://www.elastic.co/guide/en/elasticsearch/reference/7.9/circuit-breaker.html[circuit breakers],
leading to Elasticsearch giving up on some request and resulting in indexing failures.

Note that raising this number above the queue size has no effect,
as bulks cannot include more requests than are contained in the queue.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__INDEXES__INDEX_NAME__INDEXING_MAX_BULK_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_BACKENDS__BACKEND_NAME__INDEXES__INDEX_NAME__INDEXING_MAX_BULK_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`100`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.hosts]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.hosts[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.backends."backend-name".hosts]`

[.description]
--
The list of hosts of the Elasticsearch servers.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__HOSTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__HOSTS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`localhost:9200`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.protocol]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.protocol[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.backends."backend-name".protocol]`

[.description]
--
The protocol to use when contacting Elasticsearch servers. Set to "https" to enable SSL/TLS.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__PROTOCOL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__PROTOCOL+++`
endif::add-copy-button-to-env-var[]
-- a|
`http`, `https` 
|`http`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.username]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.username[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.backends."backend-name".username]`

[.description]
--
The username used for authentication.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__USERNAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.password]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.password[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.backends."backend-name".password]`

[.description]
--
The password used for authentication.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.connection-timeout]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.connection-timeout[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.backends."backend-name".connection-timeout]`

[.description]
--
The timeout when establishing a connection to an Elasticsearch server.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__CONNECTION_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__CONNECTION_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`1S`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.read-timeout]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.read-timeout[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.backends."backend-name".read-timeout]`

[.description]
--
The timeout when reading responses from an Elasticsearch server.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__READ_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__READ_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`30S`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.request-timeout]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.request-timeout[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.backends."backend-name".request-timeout]`

[.description]
--
The timeout when executing a request to an Elasticsearch server.

This includes the time needed to wait for a connection to be available,
send the request and read the response.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__REQUEST_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__REQUEST_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.max-connections]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.max-connections[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.backends."backend-name".max-connections]`

[.description]
--
The maximum number of connections to all the Elasticsearch servers.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__MAX_CONNECTIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__MAX_CONNECTIONS+++`
endif::add-copy-button-to-env-var[]
--|int 
|`20`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.max-connections-per-route]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.max-connections-per-route[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.backends."backend-name".max-connections-per-route]`

[.description]
--
The maximum number of connections per Elasticsearch server.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__MAX_CONNECTIONS_PER_ROUTE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__MAX_CONNECTIONS_PER_ROUTE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`10`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.discovery.enabled]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.discovery.enabled[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.backends."backend-name".discovery.enabled]`

[.description]
--
Defines if automatic discovery is enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__DISCOVERY_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__DISCOVERY_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.discovery.refresh-interval]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.discovery.refresh-interval[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.backends."backend-name".discovery.refresh-interval]`

[.description]
--
Refresh interval of the node list.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__DISCOVERY_REFRESH_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__DISCOVERY_REFRESH_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`10S`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.thread-pool.size]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.thread-pool.size[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.backends."backend-name".thread-pool.size]`

[.description]
--
The size of the thread pool assigned to the backend.

Note that number is **per backend**, not per index.
Adding more indexes will not add more threads.

As all operations happening in this thread-pool are non-blocking,
raising its size above the number of processor cores available to the JVM will not bring noticeable performance
benefit.
The only reason to alter this setting would be to reduce the number of threads;
for example, in an application with a single index with a single indexing queue,
running on a machine with 64 processor cores,
you might want to bring down the number of threads.

Defaults to the number of processor cores available to the JVM on startup.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__THREAD_POOL_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__THREAD_POOL_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.version-check.enabled]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.version-check.enabled[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.backends."backend-name".version-check.enabled]`

[.description]
--
Whether Hibernate Search should check the version of the Elasticsearch cluster on startup.

Set to `false` if the Elasticsearch cluster may not be available on startup.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__VERSION_CHECK_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__VERSION_CHECK_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.schema-management.required-status]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.schema-management.required-status[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.backends."backend-name".schema-management.required-status]`

[.description]
--
The minimal https://www.elastic.co/guide/en/elasticsearch/reference/7.17/cluster-health.html[Elasticsearch cluster
status] required on startup.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__SCHEMA_MANAGEMENT_REQUIRED_STATUS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__SCHEMA_MANAGEMENT_REQUIRED_STATUS+++`
endif::add-copy-button-to-env-var[]
-- a|
`green`, `yellow`, `red` 
|`yellow`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.schema-management.required-status-wait-timeout]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.schema-management.required-status-wait-timeout[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.backends."backend-name".schema-management.required-status-wait-timeout]`

[.description]
--
How long we should wait for the status before failing the bootstrap.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__SCHEMA_MANAGEMENT_REQUIRED_STATUS_WAIT_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__SCHEMA_MANAGEMENT_REQUIRED_STATUS_WAIT_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`10S`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.indexing.queue-count]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.indexing.queue-count[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.backends."backend-name".indexing.queue-count]`

[.description]
--
The number of indexing queues assigned to each index.

Higher values will lead to more connections being used in parallel,
which may lead to higher indexing throughput,
but incurs a risk of overloading Elasticsearch,
i.e. of overflowing its HTTP request buffers and tripping
https://www.elastic.co/guide/en/elasticsearch/reference/7.9/circuit-breaker.html[circuit breakers],
leading to Elasticsearch giving up on some request and resulting in indexing failures.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__INDEXING_QUEUE_COUNT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__INDEXING_QUEUE_COUNT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`10`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.indexing.queue-size]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.indexing.queue-size[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.backends."backend-name".indexing.queue-size]`

[.description]
--
The size of indexing queues.

Lower values may lead to lower memory usage, especially if there are many queues,
but values that are too low will reduce the likeliness of reaching the max bulk size
and increase the likeliness of application threads blocking because the queue is full,
which may lead to lower indexing throughput.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__INDEXING_QUEUE_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__INDEXING_QUEUE_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`1000`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.indexing.max-bulk-size]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.indexing.max-bulk-size[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.backends."backend-name".indexing.max-bulk-size]`

[.description]
--
The maximum size of bulk requests created when processing indexing queues.

Higher values will lead to more documents being sent in each HTTP request sent to Elasticsearch,
which may lead to higher indexing throughput,
but incurs a risk of overloading Elasticsearch,
i.e. of overflowing its HTTP request buffers and tripping
https://www.elastic.co/guide/en/elasticsearch/reference/7.9/circuit-breaker.html[circuit breakers],
leading to Elasticsearch giving up on some request and resulting in indexing failures.

Note that raising this number above the queue size has no effect,
as bulks cannot include more requests than are contained in the queue.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__INDEXING_MAX_BULK_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__INDEXING_MAX_BULK_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`100`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.indexes.-index-name-.schema-management.required-status]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.indexes.-index-name-.schema-management.required-status[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.backends."backend-name".indexes."index-name".schema-management.required-status]`

[.description]
--
The minimal https://www.elastic.co/guide/en/elasticsearch/reference/7.17/cluster-health.html[Elasticsearch cluster
status] required on startup.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_REQUIRED_STATUS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_REQUIRED_STATUS+++`
endif::add-copy-button-to-env-var[]
-- a|
`green`, `yellow`, `red` 
|`yellow`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.indexes.-index-name-.schema-management.required-status-wait-timeout]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.indexes.-index-name-.schema-management.required-status-wait-timeout[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.backends."backend-name".indexes."index-name".schema-management.required-status-wait-timeout]`

[.description]
--
How long we should wait for the status before failing the bootstrap.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_REQUIRED_STATUS_WAIT_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_REQUIRED_STATUS_WAIT_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`10S`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.indexes.-index-name-.indexing.queue-count]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.indexes.-index-name-.indexing.queue-count[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.backends."backend-name".indexes."index-name".indexing.queue-count]`

[.description]
--
The number of indexing queues assigned to each index.

Higher values will lead to more connections being used in parallel,
which may lead to higher indexing throughput,
but incurs a risk of overloading Elasticsearch,
i.e. of overflowing its HTTP request buffers and tripping
https://www.elastic.co/guide/en/elasticsearch/reference/7.9/circuit-breaker.html[circuit breakers],
leading to Elasticsearch giving up on some request and resulting in indexing failures.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__INDEXES__INDEX_NAME__INDEXING_QUEUE_COUNT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__INDEXES__INDEX_NAME__INDEXING_QUEUE_COUNT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`10`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.indexes.-index-name-.indexing.queue-size]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.indexes.-index-name-.indexing.queue-size[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.backends."backend-name".indexes."index-name".indexing.queue-size]`

[.description]
--
The size of indexing queues.

Lower values may lead to lower memory usage, especially if there are many queues,
but values that are too low will reduce the likeliness of reaching the max bulk size
and increase the likeliness of application threads blocking because the queue is full,
which may lead to lower indexing throughput.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__INDEXES__INDEX_NAME__INDEXING_QUEUE_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__INDEXES__INDEX_NAME__INDEXING_QUEUE_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`1000`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.indexes.-index-name-.indexing.max-bulk-size]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-elasticsearch-named-backends-runtime-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.backends.-backend-name-.indexes.-index-name-.indexing.max-bulk-size[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.backends."backend-name".indexes."index-name".indexing.max-bulk-size]`

[.description]
--
The maximum size of bulk requests created when processing indexing queues.

Higher values will lead to more documents being sent in each HTTP request sent to Elasticsearch,
which may lead to higher indexing throughput,
but incurs a risk of overloading Elasticsearch,
i.e. of overflowing its HTTP request buffers and tripping
https://www.elastic.co/guide/en/elasticsearch/reference/7.9/circuit-breaker.html[circuit breakers],
leading to Elasticsearch giving up on some request and resulting in indexing failures.

Note that raising this number above the queue size has no effect,
as bulks cannot include more requests than are contained in the queue.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__INDEXES__INDEX_NAME__INDEXING_MAX_BULK_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_BACKENDS__BACKEND_NAME__INDEXES__INDEX_NAME__INDEXING_MAX_BULK_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`100`

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
